doc: upgrade `svgbobdoc` to `0.3.0-alpha.1`
`svgbobdoc` 0.2.3 causes a compile error when `#[doc = include_str!(...)
]` is encountered.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -40,6 +40,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with: { command: doc, args: -p r3_support_rza1 }
 
+      - name: Build Documentation for “r3_portkit”
+        uses: actions-rs/cargo@v1
+        with: { command: doc, args: -p r3_portkit --all-features }
+
       - name: Build Documentation for “r3”
         uses: actions-rs/cargo@v1
         with: { command: doc, args: -p r3 --all-features }
