--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -16,6 +16,9 @@ inline_syscall = []
 priority_boost = []
 system_time = []
 
+# Enable the diagram rendering by svgbob
+doc = ["svgbobdoc/enable"]
+
 # Displays a "some features are disabled" warning in the documentation
 # when disabled so that the user can know some items are missing because of
 # that.
@@ -26,7 +29,7 @@ assert_matches = { version = "1.4.0" }
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
 pin-utils = { version = "0.1.0" }
-svgbobdoc = { version = "0.2.3" }
+svgbobdoc = { version = "0.3.0-alpha.1" }
 tokenlock = { version = "0.3.4", default-features = false }
 arrayvec = { version = "0.7.1", default-features = false }
 bitflags = { version = "1.2.1" }
