--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -13,13 +13,14 @@ arg_enum_proc_macro = "0.3.0"
 aho-corasick = "0.7.13"
 futures-core = "0.3.5"
 probe-rs-rtt = "0.11.0"
-tokio-serial = "4.3.3"
+tokio-serial = "5.4.1"
 lazy_static = "1.4.0"
 env_logger = "0.8.4"
-mio-serial = "3.3.1"
+mio-serial = "5.0.0"
 serde_json = "1.0.57"
 serialport = "3.3.0"
 itertools = "0.10.0"
+pin-utils = "0.1.0"
 structopt = "0.3.15"
 thiserror = "1.0.20"
 probe-rs = "0.11.0"
@@ -38,5 +39,5 @@ default-features = false
 features = ["std", "elf32", "elf64", "endian_fd"]
 
 [dependencies.tokio]
-version = "0.2.21"
-features = ["process", "macros", "time", "io-util", "io-std", "fs", "blocking", "sync"]
+version = "1"
+features = ["process", "macros", "time", "io-util", "io-std", "fs", "sync", "rt"]
