--- a/src/r3_port_arm_m/Cargo.toml
+++ b/src/r3_port_arm_m/Cargo.toml
@@ -22,8 +22,8 @@ memoffset = { version = "0.6.1", features = ["unstable_const"] }
 # `cargo test --all` to fail because of this, so we put these in the
 # target-specific section.
 [target."cfg(target_os = \"none\")".dependencies]
-cortex-m-rt = "0.6.12"
-cortex-m = "0.6.2"
+cortex-m-rt = ">= 0.6.12, < 0.8.0"
+cortex-m = ">= 0.6.2, < 0.8.0"
 
 [package.metadata.docs.rs]
 targets = []
