doc: preserve the `_changelog_` module documentation when publishing to GitHub Pages
<https://github.blog/2009-12-29-bypassing-jekyll-on-github-pages/>

> This should only be necessary if your site uses files or directories
> that start with underscores since Jekyll considers these to be special
> resources and does not copy them to the final site.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           mkdir output
           mv target/doc output
+          touch output/.nojekyll
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
