--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -14,7 +14,7 @@ r3 = { version = "0.1.1", path = "../r3" }
 atomic_ref = { version = "0.2.0" }
 env_logger = { version = "0.8.4" }
 once_cell = { version = "1.4.0" }
-try-mutex = { version = "0.3.0" }
+spin = { version = "0.9.2", default-features = false, features = ["spin_mutex"] }
 log = { version = "0.4.8" }
 
 [dev-dependencies.r3_test_suite]
