--- a/examples/basic_wio_terminal/Cargo.toml
+++ b/examples/basic_wio_terminal/Cargo.toml
@@ -19,4 +19,5 @@ cortex-m-rt = { version = "0.6.12" }
 usbd-serial = { version = "0.1" }
 atsamd-hal = { version = "0.13", features = ["samd51p"] }
 arrayvec = { version = "0.7.1", default-features = false }
+cortex-m = { version = "*" }
 spin = { version = "0.9.2", default-features = false, features = ["spin_mutex"] }
