--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "examples/basic_gr_peach",
     "examples/basic_nucleo_f401re",
     "examples/basic_rp_pico",
+    "examples/basic_wio_terminal",
     "examples/smp_rp_pico",
     "src/arm_semihosting",
     "src/r3",
