--- a/examples/basic_wio_terminal/Cargo.toml
+++ b/examples/basic_wio_terminal/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 # `cargo test --all` to fail because of this, so we put dependencies in the
 # target-specific section.
 [target."cfg(target_os = \"none\")".dependencies]
+r3_example_common = { path = "../common"}
 r3_port_arm_m = { path = "../../src/r3_port_arm_m" }
 r3 = { path = "../../src/r3", features = ["system_time"] }
 
