--- a/examples/basic_wio_terminal/Cargo.toml
+++ b/examples/basic_wio_terminal/Cargo.toml
@@ -17,6 +17,7 @@ embedded-graphics = { version = "0.7.1" }
 wio_terminal = { version = "0.4" }
 cortex-m-rt = { version = "0.6.12" }
 usbd-serial = { version = "0.1" }
+usb-device = { version = "0.2.7" }
 atsamd-hal = { version = "0.13", features = ["samd51p"] }
 arrayvec = { version = "0.7.1", default-features = false }
 cortex-m = { version = "*" }
