--- a/src/r3_test_suite/Cargo.toml
+++ b/src/r3_test_suite/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 categories = ["embedded", "no-std", "development-tools::testing"]
 description = "Test suite for R3"
 keywords = ["r3"]
-repository = "https://github.com/yvt/r3"
+repository = "https://github.com/r3-os/r3"
 publish = false
 
 [features]
