feat(r3): start separating the kernel API from the implementation
The API is defined in `r3`. The existing kernel implementation has been
moved to `r3_kernel`, which hasn't been adjusted for this new design
yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "examples/smp_rp_pico",
     "src/arm_semihosting",
     "src/r3",
+    "src/r3_kernel",
     "src/r3_port_arm",
     "src/r3_port_arm_m",
     "src/r3_port_arm_m_test_driver",
