feat(kernel): add `dependencies.r3`

--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -27,6 +27,9 @@ chrono = { version = "0.4.13", optional = true, default-features = false }
 either = { version = "1.6.1" }
 elain = { version = "0.3.0" }
 
+# FIXME: specify r3 version
+r3 = { path = "../r3" }
+
 [dev-dependencies]
 quickcheck_macros = "1.0.0"
 env_logger = "0.8.4"
