--- a/src/r3_port_arm_m/Cargo.toml
+++ b/src/r3_port_arm_m/Cargo.toml
@@ -14,6 +14,7 @@ preload-registers = []
 
 [dependencies]
 r3_portkit = { version = "0.1.1", path = "../r3_portkit" }
+r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { version = "0.1.1", path = "../r3" }
 
 memoffset = { version = "0.6.1", features = ["unstable_const"] }
