--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["r3", "simulator"]
 repository = "https://github.com/r3-os/r3"
 
 [dependencies]
+r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { version = "0.1.1", path = "../r3" }
 
 atomic_ref = { version = "0.2.0" }
