--- a/src/r3_portkit/Cargo.toml
+++ b/src/r3_portkit/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/r3-os/r3"
 doc = ["svgbobdoc/enable"]
 
 [dependencies]
+r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { version = "0.1.1", path = "../r3" }
 
 num-rational = { version = "0.4.0", default-features = false }
