chore(kernel): `package.publish = false`
`r3_kernel` is not ready to be published yet.

--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -8,6 +8,7 @@ description = "An RTOS kernel implementing the R3 API"
 categories = ["embedded", "no-std"]
 keywords = ["r3"]
 repository = "https://github.com/r3-os/r3"
+publish = false  # it's not ready yet
 
 [features]
 default = []
