--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -30,7 +30,7 @@ tokenlock = { version = "0.3.4", default-features = false }
 arrayvec = { version = "0.7.1", default-features = false }
 bitflags = { version = "1.2.1" }
 chrono = { version = "0.4.13", optional = true, default-features = false }
-either = { version = "1.6.1" }
+either = { version = "1.6.1", default-features = false }
 elain = { version = "0.3.0" }
 
 [dev-dependencies]
