--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -21,6 +21,7 @@ semver-exempt = [
 [dependencies]
 r3_port_arm = { version = "0.1.0", path = "../r3_port_arm" }
 r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
+r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { version = "0.1.0", path = "../r3" }
 
 embedded-hal = { version = "0.2.4", optional = true }
