--- a/src/r3_port_arm_m_test_driver/Cargo.toml
+++ b/src/r3_port_arm_m_test_driver/Cargo.toml
@@ -40,6 +40,7 @@ cpu-lock-by-basepri = []
 [dependencies]
 r3_support_rp2040 = { path = "../r3_support_rp2040", optional = true, features = ["semver-exempt"] }
 r3_port_arm_m = { path = "../r3_port_arm_m", optional = true }
+r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { path = "../r3", optional = true }
 
 cortex-m-semihosting = { version = "0.3.5", optional = true }
