--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -16,6 +16,12 @@ inline_syscall = []
 priority_boost = []
 system_time = []
 
+# Enable all optional kernel features
+full = [
+    "priority_boost",
+    "system_time",
+]
+
 [dependencies]
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
