--- a/src/r3_port_arm_m_test_driver/Cargo.toml
+++ b/src/r3_port_arm_m_test_driver/Cargo.toml
@@ -40,7 +40,6 @@ cpu-lock-by-basepri = []
 [dependencies]
 r3_support_rp2040 = { path = "../r3_support_rp2040", optional = true, features = ["semver-exempt"] }
 r3_port_arm_m = { path = "../r3_port_arm_m", optional = true }
-r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3 = { path = "../r3", optional = true }
 
 cortex-m-semihosting = { version = "0.3.5", optional = true }
@@ -52,13 +51,20 @@ cortex-m = { version = "0.7.3", optional = true, features = ["inline-asm"] }
 rp2040 = { version = "0.1.0", optional = true }
 log = { version = "0.4.8", optional = true }
 
+[dependencies.r3_kernel]
+path = "../r3_kernel"
+features = [
+    # enable all of the kernel optional features
+    "full",
+]
+
 [dependencies.r3_test_suite]
 path = "../r3_test_suite"
 default-features = false
 features = [
     # compile the test case specified by `R3_TEST`
     "tests_selective",
-    # enable all of the kernel optional features
+    # use all kernel optional features known by `r3_test_suite`
     "full",
 ]
 optional = true
