--- a/src/r3_port_arm_test_driver/Cargo.toml
+++ b/src/r3_port_arm_test_driver/Cargo.toml
@@ -34,7 +34,6 @@ output-semihosting = [
 [dependencies]
 r3_support_rza1 = { path = "../r3_support_rza1", optional = true, features = ["semver-exempt"] }
 r3_port_arm = { path = "../r3_port_arm", optional = true }
-r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 arm_semihosting = { path = "../arm_semihosting", optional = true }
 r3 = { path = "../r3", optional = true }
 
@@ -43,13 +42,20 @@ tock-registers = { version = "0.7.0", optional = true }
 rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
 log = { version = "0.4.8", optional = true }
 
+[dependencies.r3_kernel]
+path = "../r3_kernel"
+features = [
+    # enable all of the kernel optional features
+    "full",
+]
+
 [dependencies.r3_test_suite]
 path = "../r3_test_suite"
 default-features = false
 features = [
     # compile the test case specified by `R3_TEST`
     "tests_selective",
-    # enable all of the kernel optional features
+    # use all kernel optional features known by `r3_test_suite`
     "full",
 ]
 optional = true
