chore(ci): pass kernel feature flags to `r3_kernel`
Passing them to `r3_test_suite` doesn't automatically enable them in
the kernel anymore.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,7 @@ jobs:
         run: |
           features='${{ matrix.features }}'
           if [ "$features" ]; then
-            features="--features r3_test_suite/$features"
+            features="--features r3_test_suite/$features --features r3_kernel/$features"
           fi
           echo "features_param=$features" >> $GITHUB_ENV
 
