--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -16,6 +16,11 @@ default = []
 # Enable the diagram rendering by svgbob
 doc = ["svgbobdoc/enable"]
 
+# Displays a "some features are disabled" warning in the documentation
+# when disabled so that the user can know some items are missing because of
+# that.
+_full = []
+
 [dependencies]
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
