--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -22,6 +22,11 @@ full = [
     "system_time",
 ]
 
+# Displays a "some features are disabled" warning in the documentation
+# when disabled so that the user can know some items are missing because of
+# that.
+_full = []
+
 [dependencies]
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
