doc(kernel): update the crate-level documentation

--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -16,6 +16,9 @@ inline_syscall = []
 priority_boost = []
 system_time = []
 
+# Enable the diagram rendering by svgbob
+doc = ["svgbobdoc/enable"]
+
 # Enable all optional kernel features
 full = [
     "priority_boost",
