--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -22,6 +22,7 @@ doc = ["svgbobdoc/enable"]
 _full = []
 
 [dependencies]
+stable_deref_trait = { version = "1.2.0", default-features = false }
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
 pin-utils = { version = "0.1.0" }
