--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -63,6 +63,10 @@ jobs:
           mv target/doc output
           touch output/.nojekyll
 
+      - name: Copy Image
+        run: |
+          cp doc/logo-small.svg output
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
