--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -12,8 +12,8 @@ repository = "https://github.com/r3-os/r3"
 [features]
 default = []
 
-# Enable the diagram rendering by svgbob
-doc = ["svgbobdoc/enable"]
+# Enable the diagram rendering by svgbob and other fancy stuff
+doc = ["svgbobdoc/enable", "embed-doc-image"]
 
 # Displays a "some features are disabled" warning in the documentation
 # when disabled so that the user can know some items are missing because of
@@ -22,6 +22,7 @@ _full = []
 
 [dependencies]
 stable_deref_trait = { version = "1.2.0", default-features = false }
+embed-doc-image = { version = "0.1.4", optional = true }
 num-integer = { version = "0.1.42", default-features = false }
 num-traits = { version = "0.2.11", default-features = false }
 pin-utils = { version = "0.1.0" }
