chore(deps): patch `cortex-m ^0.7` with the version that is compatible with the current nightly
Fixes the build failures on the latest nightly compiler.

    error: cannot find macro `asm` in this scope
       --> /home/runner/.cargo/registry/src/github.com-1ecc6299db9ec823/cortex-m-0.7.3/src/../asm/inline.rs:384:9
        |
    384 |         asm!("mrs {}, PSPLIM", out(reg) r);
        |         ^^^
        |
        = note: consider importing this macro:
                core::arch::asm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,5 +46,12 @@ git = "https://github.com/yvt/rust-riscv-rt.git"
 rev = "07ade94990ef49b35bf298f9cbe59c671c6f1101"
 version = "0.6.2"
 
+[patch.crates-io.cortex-m]
+# FIXME: Waiting for a version including
+# <https://github.com/rust-embedded/cortex-m/pull/372> to be released
+git = "https://github.com/rust-embedded/cortex-m.git"
+rev = "441cb87e4095eafbd8b170d8f0848b99fa1ec72e"
+version = "0.7.3"
+
 [profile.release]
 debug = true
