--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -41,8 +41,8 @@ chrono = { version = "0.4.13", optional = true, default-features = false }
 either = { version = "1.6.1", default-features = false }
 elain = { version = "0.3.0" }
 
-# FIXME: specify r3 version
-r3 = { path = "../r3" }
+# FIXME: specify r3_core version
+r3_core = { path = "../r3_core" }
 
 [dev-dependencies]
 quickcheck_macros = "1.0.0"
