--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -19,7 +19,7 @@ doc = ["svgbobdoc/enable"]
 [dependencies]
 r3_portkit = { version = "0.1.1", path = "../r3_portkit" }
 r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
-r3 = { version = "0.1.1", path = "../r3" }
+r3_core = { version = "0.1.0", path = "../r3_core" }
 
 tock-registers = { version = "0.7.0" }
 svgbobdoc = { version = "0.3.0-alpha.4" }
