--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/r3-os/r3"
 
 [dependencies]
 r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
-r3 = { version = "0.1.1", path = "../r3" }
+r3_core = { version = "0.1.0", path = "../r3_core" }
 
 atomic_ref = { version = "0.2.0" }
 env_logger = { version = "0.8.4" }
