--- a/src/r3_portkit/Cargo.toml
+++ b/src/r3_portkit/Cargo.toml
@@ -12,7 +12,7 @@ doc = ["svgbobdoc/enable"]
 
 [dependencies]
 r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
-r3 = { version = "0.1.1", path = "../r3" }
+r3_core = { version = "0.1.0", path = "../r3_core" }
 
 num-rational = { version = "0.4.0", default-features = false }
 svgbobdoc = { version = "0.3.0-alpha.4" }
