doc(r3): add an example to `StaticMutex`'s documentation

--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -29,6 +29,10 @@ embed-doc-image = { version = "0.1.4", optional = true }
 svgbobdoc = { version = "0.3.0-alpha.4" }
 r3_core = { version = "0.1.0", path = "../r3_core" }
 
+[dev-dependencies]
+r3_kernel = { path = "../r3_kernel" }
+r3_port_std = { path = "../r3_port_std" }
+
 [package.metadata.docs.rs]
 all-features = true
 targets = []
