--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
         run: |
           # `r3_port_std` doesn't support Windows yet
           sed -E -i.bak 's/.*r3_port_std.*//' Cargo.toml
+          sed -E -i.bak 's/.*r3_port_std.*//' src/r3/Cargo.toml
           sed -E -i.bak 's/.*basic.*//' Cargo.toml
 
       - name: Exclude Crates
