--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -7,6 +7,6 @@ publish = false
 [dependencies]
 r3_port_std = { path = "../../src/r3_port_std" }
 r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
-r3 = { path = "../../src/r3" }
+r3 = { path = "../../src/r3", features = ["sync"] }
 
 log = { version = "0.4.8" }
