--- a/examples/basic_nucleo_f401re/Cargo.toml
+++ b/examples/basic_nucleo_f401re/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 [target."cfg(target_os = \"none\")".dependencies]
 r3_port_arm_m = { path = "../../src/r3_port_arm_m" }
 r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
-r3 = { path = "../../src/r3" }
+r3 = { path = "../../src/r3", features = ["sync"] }
 
 panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 nucleo-f401re = { version = "0.4.1" }
