--- a/examples/basic_wio_terminal/Cargo.toml
+++ b/examples/basic_wio_terminal/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 r3_example_common = { path = "../common"}
 r3_port_arm_m = { path = "../../src/r3_port_arm_m" }
 r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
-r3 = { path = "../../src/r3" }
+r3 = { path = "../../src/r3", features = ["sync"] }
 
 embedded-graphics = { version = "0.7.1" }
 wio_terminal = { version = "0.4" }
