--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -32,7 +32,7 @@ libc = "0.2.71"
 errno = "0.2.5"
 
 [target."cfg(windows)".dependencies]
-winapi = { version = "0.3.8", features = ["processthreadsapi"] }
+winapi = { version = "0.3.8", features = ["processthreadsapi", "synchapi", "errhandlingapi", "handleapi"] }
 
 [[bench]]
 name = "test_suite"
