chore(ci): use `elfy` to get section size
`llvm-size` turned out to be inaccurate under the presence of
`.text.dummy` [1] and other artifacts.

[1]: https://github.com/rust-embedded/riscv-rt/blob/1e9c004085b8a212eb390541edcc417b964925ac/link.x#L45

--- a/.github/workflows/report-size.yml
+++ b/.github/workflows/report-size.yml
@@ -35,16 +35,13 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          components: rust-src,llvm-tools-preview
+          components: rust-src
 
       - name: Install dependencies (Linux)
         run: |
           sudo apt-get update
           sudo apt-get install libusb-1.0-0-dev libudev-dev
           .github/scripts/install-deno.sh
-
-      - name: Install cargo-binutils
-        run: cargo install cargo-binutils
 
       - name: Cache test runner's binary
         uses: actions/cache@v2
