--- a/.github/workflows/report-size.yml
+++ b/.github/workflows/report-size.yml
@@ -1,6 +1,7 @@
 name: Size report
 on:
   push:
+    branches: [🦆]
 
 jobs:
   # Report the binary size of the test suite
@@ -55,7 +56,7 @@ jobs:
 
       - name: Generate a size report
         run: |
-          deno run -A scripts/report-size.ts -- --target ${{ matrix.runner_target }} ${{ matrix.runner_args }} -- event_group-basepri > size-report.md
+          deno run -A scripts/report-size.ts -- --target ${{ matrix.runner_target }} ${{ matrix.runner_args }} -- -basepri > size-report.md
 
       - name: Publish the report as a check run
         uses: LouisBrunner/checks-action@v1.2.0
