--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -8,27 +8,27 @@ publish = false
 [dependencies]
 r3_test_suite = { path = "../r3_test_suite", default-features = false }
 
-arg_enum_proc_macro = "0.3.0"
-aho-corasick = "0.7.13"
-futures-core = "0.3.5"
-probe-rs-rtt = "0.11.0"
-tokio-serial = "5.4.1"
-lazy_static = "1.4.0"
-env_logger = "0.8.4"
-serde_json = "1.0.57"
-serialport = "4.0.0"
-itertools = "0.10.0"
-pin-utils = "0.1.0"
-structopt = "0.3.15"
-thiserror = "1.0.20"
-probe-rs = "0.11.0"
-tempdir = "0.3.7"
-anyhow = "1.0.32"
-serde = "1.0.114"
-rusb = "0.8"
-toml = "0.5.6"
-log = "0.4.8"
-crc = "2.0.0"
+arg_enum_proc_macro = { version = "0.3.0" }
+aho-corasick = { version = "0.7.13" }
+futures-core = { version = "0.3.5" }
+probe-rs-rtt = { version = "0.11.0" }
+tokio-serial = { version = "5.4.1" }
+lazy_static = { version = "1.4.0" }
+env_logger = { version = "0.8.4" }
+serde_json = { version = "1.0.57" }
+serialport = { version = "4.0.0" }
+itertools = { version = "0.10.0" }
+pin-utils = { version = "0.1.0" }
+structopt = { version = "0.3.15" }
+thiserror = { version = "1.0.20" }
+probe-rs = { version = "0.11.0" }
+tempdir = { version = "0.3.7" }
+anyhow = { version = "1.0.32" }
+serde = { version = "1.0.114" }
+rusb = { version = "0.8" }
+toml = { version = "0.5.6" }
+log = { version = "0.4.8" }
+crc = { version = "2.0.0" }
 
 [dependencies.goblin]
 version = "0.4.3"
