--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -19,12 +19,12 @@ serde_json = { version = "1.0.57" }
 serialport = { version = "4.0.0" }
 itertools = { version = "0.10.0" }
 pin-utils = { version = "0.1.0" }
-structopt = { version = "0.3.15" }
 thiserror = { version = "1.0.20" }
 probe-rs = { version = "0.11.0" }
 tempdir = { version = "0.3.7" }
 anyhow = { version = "1.0.32" }
 serde = { version = "1.0.114" }
+clap = { version = "3.0.0", features = ["derive"] }
 rusb = { version = "0.8" }
 toml = { version = "0.5.6" }
 log = { version = "0.4.8" }
